objects/PrivateObject__c.object
<CustomObject>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>POName__c</fullName>
        <label>POName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharewith__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>sharewith</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PrivateObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PrivateObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>RecordID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PrivateObjects</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>codeAPEXManagedSharing__c</fullName>
        <label>codeAPEXManagedSharing</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>nocodeshare_Dynamically__c</fullName>
        <label>nocodeshare_Dynamically</label>
    </sharingReasons>
</CustomObject>